--- a/Footer/index.html
+++ b/Footer/index.html
@@ -4,14 +4,8 @@
 		<title>[SAMPLE]</title>
 		<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1" />
 		<link href='css/footer.css' type='text/css' rel='stylesheet' /> 
-		<style>
-			body
-			{
-				margin:0px;
-			}
-		</style>
 	</head>
-	<body>
+	<body style='margin:0px;'>
 		<footer>
 			<div class='stamp'>
 				<div class='cover'></div>
