--- a/Header/index.html
+++ b/Header/index.html
@@ -5,6 +5,7 @@
 		<title>SAMPLE</title>
 		<link href='css/header.css' rel='stylesheet' type='text/css' />
 		<link href='css/footer.css' rel='stylesheet' type='text/css' />
+		<link href='css/index.css' rel='stylesheet' type='text/css' />
 		<script type='text/javascript' src='js/jquery.min.js'></script>
 		<script type='text/javascript' src='js/header.js'></script>
 		<style>
